<resources>
    <string name="app_name">GPS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_maps">Maps</string>
    <string name="drawer_open">AbrirMenu</string>
    <string name="drawer_close">CerrarMenu</string>
    <string name="configuracion">Configuracion</string>
    <string name="Btn_Guardar">Guardar Texto</string>
    <string name="Texto_Explicacion">Escriba lo que desea poner en el marcador</string>
    <string name="hint_TextoInput">Home</string>
    <string name="AcercaDe">AcercaDe</string>
    <string name="Llamada">Llamada</string>
</resources>