<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
<item
    android:id="@+id/home"
    android:title="@string/nav_home"
    android:icon="@android:drawable/ic_menu_info_details" />

    <item
        android:id="@+id/maps"
        android:title="@string/nav_maps"
        android:icon="@android:drawable/ic_menu_mapmode" />

<item
    android:id="@+id/Configuracion"
    android:title="@string/configuracion"
    android:icon="@android:drawable/ic_menu_preferences"/>

    <item
        android:id="@+id/AcercaDe"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/AcercaDe" />

<item
    android:id="@+id/PolyConfig"
    android:icon="@android:drawable/ic_menu_preferences"
    android:title="Configuracion de Puntos del poligono"/>



</group>
</menu>