<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Configuracion">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Configuracion">

        <Button
            android:id="@+id/BtnGuardar"
            android:layout_width="281dp"
            android:layout_height="103dp"
            android:text="@string/Btn_Guardar"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.795" />

        <TextView
            android:id="@+id/TextoExplicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Texto_Explicacion"
            android:textSize="48sp"
            app:layout_constraintBottom_toTopOf="@+id/TextoInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.725" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_TextoInput"
            android:textSize="34sp"
            app:layout_constraintBottom_toTopOf="@+id/BtnGuardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.657" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>